--- a/src/rk3588/CMakeLists.txt
+++ b/src/rk3588/CMakeLists.txt
@@ -1,5 +1,5 @@
 # ------------------------------------------------------------
-# module name
+# name
 # ------------------------------------------------------------
 set(NAME test_streamx_rk3588)
 
@@ -9,7 +9,7 @@ set(NAME test_streamx_rk3588)
 file(GLOB TEST_SRCS *.cpp)
 
 # ------------------------------------------------------------
-# build on rk3588
+# build
 # ------------------------------------------------------------
 add_executable(${NAME} ${TEST_SRCS})
 
